--- a/mmb-plugin/README
+++ b/mmb-plugin/README
@@ -1,4 +1,5 @@
-##Compile an external VPP plugin separately of VPP
+Compile an external VPP plugin separately of VPP
+--
 
 autoreconf -fis
 ./configure
